@@ -10,17 +10,13 @@ KERNELNAME := $(KERNELNAME)-tape
 
 MANIFEST-KERNEL = "kernel for tape ipl"
 
-dest/tape/parmfile.debian:
-	install -m644 boot/s390/parmfile $@
-	./update-manifest $@ "parmfile"
-
-dest/tape/initrd.debian:
+$(DEST)/initrd.debian:
 	ln -fs ../generic/initrd.debian $@
 	./update-manifest $@ "initrd"
 
-dest/tape/kernel.debian-nolabel: dest/tape/kernel.debian
+$(DEST)/kernel.debian-nolabel: $(DEST)/kernel.debian
 	(dd bs=1 count=8 && dd bs=1 skip=1 count=0 && printf "\007" && dd) < $< > $@
 	./update-manifest $@ "kernel for tape ipl - nolabel"
 
-tmp/tape/kernel.debian: tmp/tape/vmlinuz-tape
+$(TEMP)/kernel.debian: $(TEMP)/vmlinuz-tape
 	ln $+ $@
